--- a/noblenoor/src/Profile/Signup.css
+++ b/noblenoor/src/Profile/Signup.css
@@ -1,51 +1,38 @@
-.form-container {
+.signup-container {
     width: 400px;
-    margin: 0 auto;
+    margin: 100px auto 0;
     padding: 20px;
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 100px;
-
 }
 
-h2 {
+.signup-container h2 {
     text-align: center;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     margin-top: 10px;
 }
 
-p {
+.signup-container p {
     text-align: center;
     color: #6b6b6b;
-    margin-bottom: 20px;
-}
-
-
-.input-group {
     margin-bottom: 15px;
-    margin-top: 25px;
 }
 
-.input-group input {
-    width: 100%;
+.signup-container form {
+    display: flex;
+    flex-direction: column;
+}
+
+.signup-container input {
+    margin-bottom: 15px;
     padding: 10px;
     border: 1px solid #d3d3d3;
     border-radius: 5px;
+    font-size: 16px;
 }
 
-.forgot-password {
-    text-align: right;
-    margin-bottom: 20px;
-}
-
-.forgot-password a {
-    color: #6b6b6b;
-    text-decoration: none;
-}
-
-.submit-btn {
-    width: 100%;
+.signup-container button {
     padding: 10px;
     background-color: #fa9530;
     color: #fff;
@@ -53,16 +40,25 @@ p {
     border-radius: 5px;
     cursor: pointer;
     font-size: 16px;
-    
+    margin-bottom: 15px;
 }
 
-.login-redirect {
+.signup-container button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.error-message {
+    color: red;
     text-align: center;
-    margin-top: 20px;
-    color: #6b6b6b;
+    margin-bottom: 15px;
 }
 
-.login-redirect a {
+.signup-container a {
     color: #007bff;
     text-decoration: none;
+}
+
+.signup-container a:hover {
+    text-decoration: underline;
 }
