--- a/noblenoor/src/Collection/Collection.css
+++ b/noblenoor/src/Collection/Collection.css
@@ -122,17 +122,8 @@ h2 {
     width: 100%;
 }
 
-.alert-message {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px;
-    z-index: 999;
-    border-radius: 5px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    transition: opacity 0.2s ease;
+.add-to-cart-button:hover {
+    background-color: #000000;
 }
 
 .product-sidebar {
