--- a/noblenoor/src/Profile/AccountPage.css
+++ b/noblenoor/src/Profile/AccountPage.css
@@ -16,14 +16,14 @@ h1 {
   left: 50%;
   transform: translateX(-50%);
   padding: 10px 20px;
-  background-color: #f44336;
+  background-color: #f06d64;
   color: white;
   text-decoration: none;
   border-radius: 5px;
   font-weight: bold;
-  margin-top: 30px;
+  margin-top: 60px;
 }
 
 .log-out:hover {
-  background-color: #63ec8c;
+  background-color: #f06d64;
 }
